testsuite/tests/grammar/invalid_lexers/pattern_6.lkt
from common import Example

lexer foo_lexer {
    Example <- p"a)"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
